concluded categories and added it to homepage

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -53,6 +53,7 @@
                     <li><a class="dropdown-item" href="{% url 'contact_us' %}">Contact Customer</a></li>
                     <li><a class="dropdown-item" href="{% url 'orders' %}">Customer Orders</a></li>
                     <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                    <li><a class="dropdown-item" href="{% url 'categories' %}">Categories</a></li>
                     {% else %}
                     <li><a class="dropdown-item" href="{% url 'contact_us2' %}">Contact Us</a></li>
                     {% endif %}
@@ -89,7 +90,7 @@
         </div>
     </nav>
 
-    <div class='container'>
+  
         <div id='messages'>
             {% if messages %}
               {% for message in messages %}
@@ -102,10 +103,10 @@
               {% endfor %}   
             {% endif %}
         </div>
-      {% block content %}
-        
-      {% endblock content %}
-    </div>
+{% block content %}
+  
+{% endblock content %}
+ 
 
 
 
