--- a/static/css/store.css
+++ b/static/css/store.css
@@ -1,12 +1,27 @@
 
+.store{
+    display: flex !important;
+    flex-wrap: wrap !important;
+}
+.store .wrapper{
+    display: flex !important;
+    flex-direction: row;
+    justify-content: center !important;
+}
 
-.row .col{
+
+.products{
     display: flex !important;
     flex-wrap: wrap;
+    flex-direction: row !important;
     
 }
 
 .card{
     width: 200px !important;
-    margin: 20px;
+    margin: 10px;
+}
+
+.categories{
+    margin-right: 100px !important;
 }
