--- a/store/templates/products.html
+++ b/store/templates/products.html
@@ -8,6 +8,7 @@
             <p><img src="{{product.imageURL}}" alt="" width='300'></p>
             <p>{{product.name}}</p>
             <p>{{product.description}}</p>
+            <p>{{product.category}}</p>
             <p>${{product.price}}</p>
             <p><button class='btn update-cart  btn-sm bg-danger text-light' value={{product.id}}>Add to Cart</button></p>
         </div>
