added direct ui for add and edit product

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -54,6 +54,7 @@
                     <li><a class="dropdown-item" href="{% url 'orders' %}">Customer Orders</a></li>
                     <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
                     <li><a class="dropdown-item" href="{% url 'categories' %}">Categories</a></li>
+                    <li><a class="dropdown-item" href="{% url 'add_product' %}">Add New Product</a></li>
                     {% else %}
                     <li><a class="dropdown-item" href="{% url 'contact_us2' %}">Contact Us</a></li>
                     {% endif %}
