--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -34,45 +34,50 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+              <li class="nav-item dropdown">
+                {% if user.is_authenticated%}
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      {{user.username}}
+                    </a>
+                    <ul class="dropdown-menu">
+                      
+                      <li><a class="dropdown-item" href="{% url 'profile' user.customer.pk %}">Profile</a></li>
+                      <li><a class="dropdown-item" href="{% url 'change_password' user.customer.pk %}">Change Password</a></li>
+                      <li><a class="dropdown-item" href="{% url 'contact_us2' %}">Contact Us</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+                {% else %}
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Guest
+                  </a>
+                  
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="register">Register</a></li>
+                    <li><a class="dropdown-item" href="{% url 'contact_us2' %}">Contact Us</a></li>
+                  </ul>
+                {% endif %}
               </li>
               <li class="nav-item dropdown">
-              {% if user.is_authenticated%}
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    {{user.username}}
-                  </a>
-                  <ul class="dropdown-menu">
-                    
-                    <li><a class="dropdown-item" href="{% url 'profile' user.customer.pk %}">Profile</a></li>
-                    <li><a class="dropdown-item" href="{% url 'change_password' user.customer.pk %}">Change Password</a></li>
-                    {% if user.is_staff %}
-                    <li><a class="dropdown-item" href="{% url 'contact_us' %}">Contact Customer</a></li>
-                    <li><a class="dropdown-item" href="{% url 'orders' %}">Customer Orders</a></li>
-                    <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
-                    <li><a class="dropdown-item" href="{% url 'categories' %}">Categories</a></li>
-                    <li><a class="dropdown-item" href="{% url 'add_product' %}">Add New Product</a></li>
-                    {% else %}
-                    <li><a class="dropdown-item" href="{% url 'contact_us2' %}">Contact Us</a></li>
-                    {% endif %}
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                  </ul>
-              {% else %}
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Guest
-                </a>
-                
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="register">Register</a></li>
-                  <li><a class="dropdown-item" href="{% url 'contact_us2' %}">Contact Us</a></li>
-                </ul>
-              {% endif %}
+                {% if user.is_authenticated and user.is_staff%}
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Staff Portal
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="{% url 'contact_us' %}">Contact Customer</a></li>
+                      <li><a class="dropdown-item" href="{% url 'orders' %}">Customer Orders</a></li>
+                      <li><a class="dropdown-item" href="{% url 'categories' %}">Categories</a></li>
+                      <li><a class="dropdown-item" href="{% url 'add_product' %}">Add New Product</a></li>
+                      {% if user.is_superuser %}
+                      <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                      {% endif %}
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+
+                {% endif %}
               </li>
               <li class="nav-item">
                 <a class="nav-link" href=" {% url 'cart' %} "><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
