--- a/store/templates/registration/delete_address.html
+++ b/store/templates/registration/delete_address.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
-{% block title %}Obaya Online | Add Address{% endblock title %}
+{% block title %}Obaya Online | Delete Address{% endblock title %}
 
 {% block content %}
     <div class="row" >
-        <p><h6>Fill the form below to add an address</h6></p>
+        <p><h6>Sure you want to delete?</h6></p>
 
         <form action="" method ='POST'>
             {% csrf_token %}
             {{form.as_p}}
-            <button class="btn btn-primary" type='submit'>Submit</button>
+            <button class="btn btn-primary" type='submit'>Delete</button>
         </form>
     </div>
 
