--- a/store/templates/registration/profile.html
+++ b/store/templates/registration/profile.html
@@ -1,30 +1,53 @@
 {% extends 'base.html' %}
 {% block title %}Obaya Online | Profile{% endblock title %}
 
-
 {% block content %}
   <div class="row">
     <div class="col">
-{% if customer %}
-      <div class="col-2">
-        <p><a class="dropdown-item" href="{% url 'edit_profile' customer.user.pk %}">Edit Profile</a></p>
-      </div>      
-      <p>Name: {{ customer.user }}</p>
-      <p>Email: {{ customer.user.email }}</p>
-    {% if addresses %}
-    <h6>Address:</h6>
-      {% for address in addresses %}
-        <p>{{ address.address }}</p>
-        <p>{{ address.city }}, {{ address.state }} {{ address.zipcode }}</p>
-        <p><a href="">(Edit)</a> |  <a href="">(Delete)</a></p>
-      {% endfor %}
-    {% else %}
-      <p>No address on file.</p>
-    {% endif %}
-{% else %}
-  <p>You are not logged in.</p>
-{% endif %}
-
+      {% if customer %}
+        <div class="col-2">
+          <p><a class="dropdown-item" href="{% url 'edit_profile' customer.user.pk %}">Edit Profile</a></p>
+        </div>
+        <form method="POST">
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="name" name="name" value="{{ customer.user }}">
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" value="{{ customer.user.email }}">
+          </div>
+          {% if addresses %}
+            <h6>Address:</h6>
+            {% for address in addresses %}
+              <div class="form-group">
+                <label for="address">Address:</label>
+                <input type="text" class="form-control" id="address" name="address" value="{{ address.address }}">
+              </div>
+              <div class="form-group">
+                <label for="city">City:</label>
+                <input type="text" class="form-control" id="city" name="city" value="{{ address.city }}">
+              </div>
+              <div class="form-group">
+                <label for="state">State:</label>
+                <input type="text" class="form-control" id="state" name="state" value="{{ address.state }}">
+              </div>
+              <div class="form-group">
+                <label for="zipcode">Zip Code:</label>
+                <input type="text" class="form-control" id="zipcode" name="zipcode" value="{{ address.zipcode }}">
+              </div>
+              <p><a href="{% url 'edit_address' pk=address.pk %}">(Edit)</a> |  <a href="{% url 'delete_address' address.pk%}">(Delete)</a></p>
+            {% endfor %}
+          {% else %}
+            <p>No address on file.</p>
+          {% endif %}
+          <button type="submit" class="btn btn-primary">Update Profile</button>
+          <a href="{% url 'add_address'  %}" class="btn btn-secondary">Add a new address</a>
+        </form>
+      {% else %}
+        <p>You are not logged in.</p>
+      {% endif %}
     </div>
   </div>
 {% endblock %}
