--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -14,15 +14,9 @@
 }
 
 .card{
-    margin: 10px;
-    width: 60rem !important;
+    margin-bottom: 10px !important;
 } 
 
-#checkout-wrapper #checkout-boxes{
-    display: flex;
-}
-  
-  
 
 
 
@@ -31,10 +25,14 @@
 
 
 
-/* Small screens (up to 576px) */
-@media (max-width: 760px) {
 
+/* MEDIA QUERIES */
+
+@media only screen and (max-width:760px) {
+
+    #mobile-cart {
+        display: none;
+    }
 
     
-  }
-  
+}
