--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -6,72 +6,78 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/cart.css' %}">
 
 
-    <div class="row my-1">
-        <div class="col-lg-12">
-
-        {% comment %} items in the cart {% endcomment %}
-
-            <div class="box-element">
-                <a href="{% url 'store'%}" class='btn btn-outline-dark'>&#8592;Continue Shopping</a>
-                <hr>
-                <table class='table'>
-                    <tr>
-                        <th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
-                        <th><h5>Total: <strong>price: ${{order.get_cart_total}}</strong></h5></th>
-                        <th>
-                            <a style='float:right; margin:5px'  href=" {% url 'checkout' %} " class='btn btn-outline-dark' >Checkout &rarr;</a>
-                        </th>
-                    </tr>
-
-                </table>
-
-            </div>
-
-
-            <div class="box-element">
-                <div class="cart-row">
-                    <div style='flex:2' ><strong></strong></div>
-                    <div style='flex:2' ><strong>Product</strong></div>
-                    <div style='flex:1' ><strong>Price</strong></div>
-                    <div style='flex:1' ><strong>Quantity
-                        </strong>
+<div class="container">
+    <div class="row">
+        <div class="col" style="height: max-content;">
+            <div class="row my-1">
+                <div class="col-lg-12">
+        
+                {% comment %} items in the cart {% endcomment %}
+        
+                    <div class="box-element">
+                        <a href="{% url 'store'%}" class='btn btn-outline-dark'>&#8592;Continue Shopping</a>
+                        <hr>
+                        <table class='table'>
+                            <tr>
+                                <th><h5>Items: <strong>{{order.get_cart_items}}</strong></h5></th>
+                                <th><h5>Total: <strong>price: ${{order.get_cart_total}}</strong></h5></th>
+                                <th>
+                                    <a style='float:right; margin:5px'  href=" {% url 'checkout' %} " class='btn btn-outline-dark' >Checkout &rarr;</a>
+                                </th>
+                            </tr>
+        
+                        </table>
+        
                     </div>
-                    <div style='flex:1' ><strong>Total</strong></div>
-                </div>
-
-            </div>
-
-            <div class="box-element">
-                {% for item in items%}
-                    <div class="cart-row">
-                        <div style='flex:2' ><img src="{{item.product.imageURL}}" alt="{{item.product.name}}" width='200'></div>
-                        <div style='flex:2' >{{item.product.name}}</div>
-                        <div style='flex:1' >{{item.product.price}}</div>
-                        <div style='flex:1' class="quantity">
-                            <form class="update-cart-form" method="POST">
-                                {% csrf_token %}
-                                <input type="hidden" name="product_id" value="{{ item.product.id }}">
-                                <button class="btn update-cart" type="submit" name="action" value="subtract">-</button>
-                                <span id="quantity-{{ item.product.id }}" class="quantity-value">{{ item.quantity }}</span>
-                                <button class="btn update-cart" type="submit" name="action" value="add">+</button>
-                            </form>
-                            <div style='flex:1' >
-                                <form action="{% url 'cart-item-delete' item.id %}" method="POST" style='margin-left: 15px;'>
-                                    {% csrf_token %}
-                                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                                </form>
+        
+        
+                    <div class="box-element">
+                        <div class="cart-row">
+                            <div style='flex:2' ><strong></strong></div>
+                            <div style='flex:2' ><strong>Product</strong></div>
+                            <div style='flex:1' ><strong>Price</strong></div>
+                            <div style='flex:1' ><strong>Quantity
+                                </strong>
                             </div>
-                        </div>                        
-                        <div style='flex:1' >{{item.get_total}}</div>
-                        
+                            <div style='flex:1' ><strong>Total</strong></div>
+                        </div>
+        
                     </div>
-                {% endfor %}
+        
+                    <div class="box-element">
+                        {% for item in items%}
+                            <div class="cart-row">
+                                <div style='flex:2' ><img src="{{item.product.imageURL}}" alt="{{item.product.name}}" width='100'></div>
+                                <div style='flex:2' >{{item.product.name}}</div>
+                                <div style='flex:1' >{{item.product.price}}</div>
+                                <div style='flex:1' class="quantity">
+                                    <form class="update-cart-form" method="POST">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="product_id" value="{{ item.product.id }}">
+                                        <button class="btn update-cart" type="submit" name="action" value="subtract">-</button>
+                                        <span id="quantity-{{ item.product.id }}" class="quantity-value">{{ item.quantity }}</span>
+                                        <button class="btn update-cart" type="submit" name="action" value="add">+</button>
+                                    </form>
+                                    <div style='flex:1' >
+                                        <form action="{% url 'cart-item-delete' item.id %}" method="POST" style='margin-left: 15px;'>
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                                        </form>
+                                    </div>
+                                </div>                        
+                                <div style='flex:1' >{{item.get_total}}</div>
+                                
+                            </div>
+                        {% endfor %}
+                    </div>
+                    
+        
+                </div>
             </div>
-            
-
+        
         </div>
     </div>
-
+</div>
 
 
 
