--- a/store/templates/categories.html
+++ b/store/templates/categories.html
@@ -2,17 +2,27 @@
 {% block title %}Obaya Online | Categories{% endblock title %}
 {% block content %}
 
-<div class="row">
 
-    <div><a href="{% url 'add_category' %}">Add Category</a></div>
-    {% for category in categories %}
+
+
+<div class="container">
+  <div class="row">
+    <div class="col" style="height: max-content; margin-top: 10px;">
+      <div><a href="{% url 'add_category' %}" class="btn btn-secondary">Add Category</a></div>
+      {% for category in categories %}
+      <div style="margin-top: 10px;">
         <ul>
-            <li><a href="{% url 'category_detail' category.pk %}" >{{category.name}}</a></li>
+          <li><a href="{% url 'category_detail' category.pk %}" style="text-decoration: none; x">{{category.name}}</a></li>
         </ul>
-    {% endfor %}
+      </div>
+      {% endfor %}
 
 
+    </div>
+  </div>
 </div>
+
+
 
 
 
