--- a/store/templates/customer/orders.html
+++ b/store/templates/customer/orders.html
@@ -7,35 +7,41 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/orders.css' %}">
 
 
+<div class="container">
+  <div class="row">
+      <div class="col" style="height: 82vh;">
+        <h5 style="margin-top: 10px;">Customer Orders</h5>
+        <table>
+          <thead>
+            <tr>
+              <th>Transaction ID</th>
+              <th>Customer</th>
+              <th>Date Ordered</th>
+              <th>Complete</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for order in orders %}
+              <tr>
+                <td><a href="{% url 'order_detail' order.transaction_id  %}">{{ order.transaction_id }}</a></td>
+                <td>{{ order.customer }} - {{ order.customer.user.email }}</td>
+                <td>{{ order.date_ordered }}</td>
+                <td>{{ order.complete }}</td>
+              </tr>
+            {% empty %}
+              <tr>
+                <td colspan="4">No orders found.</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      
 
-    <div class="row">
-        <div class="col">
-            <h1>All Orders</h1>
-            <table>
-              <thead>
-                <tr>
-                  <th>Transaction ID</th>
-                  <th>Customer</th>
-                  <th>Date Ordered</th>
-                  <th>Complete</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for order in orders %}
-                  <tr>
-                    <td><a href="{% url 'order_detail' order.transaction_id  %}">{{ order.transaction_id }}</a></td>
-                    <td>{{ order.customer }} - {{ order.customer.user.email }}</td>
-                    <td>{{ order.date_ordered }}</td>
-                    <td>{{ order.complete }}</td>
-                  </tr>
-                {% empty %}
-                  <tr>
-                    <td colspan="4">No orders found.</td>
-                  </tr>
-                {% endfor %}
-              </tbody>
-            </table>
           
-        </div>
-    </div>
+      </div>
+  </div>
+</div>
+
+   
+        
 {% endblock %}
