--- a/store/templates/registration/edit_address.html
+++ b/store/templates/registration/edit_address.html
@@ -4,10 +4,21 @@
 
 
 {% block content %}
-  <h1>Edit Address</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Save">
-  </form>
+<div class="container">
+  <div class="row">
+      <div class="col" style="height: 82vh;">
+        <h3 style="margin-top: 5px;">Edit Address</h3>
+          <div class="form-control-group">
+              <div class="form-group">
+                  <form action="" method='POST' class='form-control'>
+                      {% csrf_token %}
+                      {{form.as_p}}
+                      <button type='submit' class="btn btn-primary">Submit</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
 {% endblock %}
