--- a/store/templates/registration/edit_profile.html
+++ b/store/templates/registration/edit_profile.html
@@ -2,13 +2,20 @@
 {% block title %}Obaya Online | Edit Profile{% endblock title %}
 
 {% block content %}
-    <div class="form-control-group">
-        <div class="form-group">
-            <form action="" method='POST' class='form-control'>
-                {% csrf_token %}
-                {{form.as_p}}
-                <button type='submit'>Submit</button>
-            </form>
+    <div class="container">
+        <div class="row">
+            <div class="col" style="height: 82vh;">
+                <h3 style="margin-top: 5px;">Edit Profile</h3>
+                <div class="form-control-group">
+                    <div class="form-group">
+                        <form action="" method='POST' class='form-control'>
+                            {% csrf_token %}
+                            {{form.as_p}}
+                            <button type='submit' class="btn btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        </div>
+    </div>
 {% endblock content %}
