--- a/store/templates/unauthorized.html
+++ b/store/templates/unauthorized.html
@@ -3,12 +3,14 @@
 {% block title %}Obaya Online | Unauthorized Entry{% endblock title %}
 
 {% block content %}
-
-    <div class="row">
-        <div class="col">
-            <img src="{% static 'images/stop.jpg' %}" alt="" width='300'>
-            <p><h5>STOP in the name of the law!!!</h5></p>
-            <p><h6>You cannot access this page. Go <a href="{% url 'store' %}">home!!</a></h6></p>
+    <div class="container">
+        <div class="row">
+            <div class="col" style="height: 82vh; margin-top: 20px;">
+                <img src="{% static 'images/stop.jpg' %}" alt="" width='200'>
+                <p><h5>STOP in the name of the law!!!</h5></p>
+                <p><h6>You cannot access this page. Go <a href="{% url 'store' %}">home!!</a></h6></p>
+            </div>
         </div>
     </div>
+  
 {% endblock content %}
