--- a/store/templates/add_category.html
+++ b/store/templates/add_category.html
@@ -4,9 +4,9 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col" style="height: 82vh; margin-top: 10px;">
+        <div class="col" style="max-height: max-content; margin-top: 10px; min-height: 82vh;" >
           <p>
-          <h6>Fill the form below to add an address</h6>
+          <h6>Fill the form below to add a new category</h6>
           </p>
       
           <form action="" method='POST'>
