--- a/store/templates/add_product.html
+++ b/store/templates/add_product.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col"  style="height: max-content; margin-top: 10px;">
+        <div class="col" style="max-height: max-content; margin-top: 10px; min-height: 82vh;">
             <p><h6>Fill the form below to add a product</h6></p>
     
             <form action="" method ='POST'>
