--- a/store/templates/categories.html
+++ b/store/templates/categories.html
@@ -7,7 +7,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col" style="height: max-content; margin-top: 10px;">
+    <div class="col" style="max-height: max-content; margin-top: 10px; min-height: 82vh;">
       <div><a href="{% url 'add_category' %}" class="btn btn-secondary">Add Category</a></div>
       {% for category in categories %}
       <div style="margin-top: 10px;">
