--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -7,7 +7,7 @@
 
 <div class="container">
   <div class="row">
-        <div class="col" style="height: max-content;">
+        <div class="col" style="min-height: 82vh; max-height: max-content;">
         <a href="{% url 'cart' %}" class='btn btn-outline-dark my-2'>Back to Cart</a>
 
         <div class="card">
