--- a/store/templates/customer/contact_us.html
+++ b/store/templates/customer/contact_us.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col" style="height: max-content;">
+        <div class="col" style="min-height: 82vh; max-height: max-content;">
           <h5 style="margin-top: 10px;">Kindly fill in the details below to contact the customer</h5>
             <div class="form-control-group">
                 <div class="form-group">
