--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -7,6 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/store.css' %}">
 
+<div class="complete-store">
   <div class='sorting'>
     <div class=' mx-4 my-2'>
       <div class="dropdown">
@@ -68,5 +69,6 @@
       </div>
     </div>
   </div>
+</div>
 
 {% endblock content %}
