--- a/store/templates/edit_product.html
+++ b/store/templates/edit_product.html
@@ -2,14 +2,18 @@
 {% block title %}Obaya Online | Update Product{% endblock title %}
 
 {% block content %}
-    <div class="row" >
-        <p><h6>Fill the form below to add update product</h6></p>
-
-        <form action="" method ='POST'>
-            {% csrf_token %}
-            {{form.as_p}}
-            <button class="btn btn-primary" type='submit'>Submit</button>
-        </form>
+<div class="container">
+    <div class="row">
+        <div class="col" style="max-height: max-content; margin-top: 10px; min-height: 82vh;" >
+            <p><h6>Fill the form below to add update product</h6></p>
+    
+            <form action="" method ='POST'>
+                {% csrf_token %}
+                {{form.as_p}}
+                <button class="btn btn-primary" type='submit'>Submit</button>
+            </form>
+        </div>
     </div>
+</div>
 
 {% endblock %}
