--- a/store/templates/registration/register.html
+++ b/store/templates/registration/register.html
@@ -4,21 +4,27 @@
 {% block content %}
 
     
-    <div class="form-control-group">
-        <div class="form-group">
-            <h3>Kindly enter your details</h3>
-            <form action="" method='POST'class='form-control'>
-    
-                {% csrf_token %}
-                {{form.as_p}}
-                <ul>
-                    <li>Your password can’t be too similar to your other personal information.</li>
-                    <li>Your password must contain at least 8 characters.</li>
-                    <li>Your password can’t be a commonly used password.</li>
-                    <li>Your password can’t be entirely numeric.</li>
-                </ul>
-                <button class = 'btn btn-secondary'>Register</button>
-            </form>
+    <div class="container">
+        <div class="row">
+            <div class="col" style="min-height: 82vh; max-height: max-content;">
+                <div class="form-control-group">
+                    <div class="form-group">
+                        <h3>Kindly enter your details</h3>
+                        <form action="" method='POST'class='form-control'>
+                
+                            {% csrf_token %}
+                            {{form.as_p}}
+                            <ul>
+                                <li>Your password can’t be too similar to your other personal information.</li>
+                                <li>Your password must contain at least 8 characters.</li>
+                                <li>Your password can’t be a commonly used password.</li>
+                                <li>Your password can’t be entirely numeric.</li>
+                            </ul>
+                            <button class = 'btn btn-secondary'>Register</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
