adjusted models and checkout to redirect to host

--- a/store/templates/checkout.html
+++ b/store/templates/checkout.html
@@ -103,7 +103,7 @@
       amount: cart_total,
       currency: "USD",
       payment_options: "card, mobilemoneyghana, ussd",
-      redirect_url: "http://127.0.0.1:8000/confirm_payment/" + cart_id,
+      redirect_url: "http://http://obayaonline.pythonanywhere.com/confirm_payment/"+cart_id,
 
       meta: {
         consumer_id: customer_id,
