--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/store.css' %}">
 
-<div class="complete-store">
+<div class="complete-store" style="min-height: 82vh; max-height: max-content; margin-top: 20px; ">
   <div class='sorting'>
     <div class=' mx-4 my-2'>
       <div class="dropdown">
